fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@
 
 .page2Container{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     max-width: 100%;
@@ -95,30 +95,50 @@
 
 }
 
-.bilarContainerTop{
+.containerRow{
     display: flex;
-    justify-content:center;
-    width: 100%;
-    height: 50vh;
-}
-
-.bilarContainerBottom{
-    display: flex;
+    flex-direction: row;
     justify-content: center;
     width: 100%;
-    height: 50vh;
+    height: 100%;
+}
+
+.bilarContainerLeft{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    width: 33%;
+    height: 100vh;
+}
+
+.bilarContainerMid{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 33%;
+    height: 100vh;
+}
+
+.bilarContainerRight{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 33%;
+    height: 100vh;
 }
 
 .bilBild{
     display: flex;
     height: 50vh;
-    width: 33.3%;
+    width: 100%;
     transition: 0.3s;
+    overflow-x: hidden;
 }
 
 .bilBild:hover{
     transform: scale(1.03);
     opacity: 100%;
+    
 }
 
 .test{
